--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,7 @@ tasks:
   - before: |
       export FLASK_APP=flaskr
       export FLASK_ENV=development
+      export PATH=$PATH:/home/gitpod/.local/bin
     init: |
       pip install -e .
       flask init-db
